fix🐛(css): hide horizontal scroll bar
Close #14

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body {
     background-color: #555b6e;
     padding-top: 20px;
+    overflow-x: hidden;
 }
 
 * {
